--- a/pweb/WebContent/WEB-INF/web.xml
+++ b/pweb/WebContent/WEB-INF/web.xml
@@ -9,4 +9,13 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+        <servlet-name>Distributeur Manager</servlet-name>
+        <servlet-class>hib.DistributeurManagerServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>Distributeur Manager</servlet-name>
+        <url-pattern>/distributeurmanager</url-pattern>
+    </servlet-mapping>
 </web-app>
