--- a/pweb/.classpath
+++ b/pweb/.classpath
@@ -1,35 +1,329 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-13">
+		<attributes>
+			<attribute name="module" value="true"/>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/javax.servlet.jar.zip"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/javax.servlet.jar/javax.servlet.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/beam-sdks-java-io-file-based-io-tests-2.16.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/officeshim_java8-3.19.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (2/json-20190722.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/woden-qname-1.0M9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/cats-core_sjs0.6_2.12-2.0.0-M4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/cats-kernel_sjs0.6_2.12-2.0.0-M4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/cats-macros_sjs0.6_2.12-2.0.0-M4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/circe-core_sjs0.6_2.12-0.12.0-M3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/circe-numbers_sjs0.6_2.12-0.12.0-M3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/circe-parser_sjs0.6_2.12-0.12.0-M3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/circe-scalajs_sjs0.6_2.12-0.12.0-M3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/irpatch_sjs0.6_2.12-2.3.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/machinist_sjs0.6_2.12-0.6.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/scalajs-library_2.12-0.6.31.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/scala-library-2.12.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (4)/scala-reflect-2.12.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (5)/geronimo-stax-api_1.2_spec-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (5)/org.apache.karaf.specs.java.xml-4.3.0.RC1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (5)/org.apache.karaf.specs.locator-4.3.0.RC1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jar_files (5)/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jakarta.jws-api-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/string-1.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jackson-core-2.7.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/object-mapper-api-0.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jax-rs/javax.ws.rs-api-2.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jax-rs/javax.ws.rs-api-2.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/renar/Desktop/GitHub/jar/jax-rs/javax.ws.rs-api-2.0.jar/javax.ws.rs-api-2.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/antlr-2.7.7.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/byte-buddy-1.8.12.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/c3p0-0.9.5.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/classmate-1.3.4.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/dom4j-1.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/geolatte-geom-1.3.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-c3p0-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-commons-annotations-5.0.3.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-core-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-envers-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-jpamodelgen-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-osgi-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-proxool-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/hibernate-spatial-5.3.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/jandex-2.0.3.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/javassist-3.22.0-GA.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/javax.interceptor-api-1.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/javax.persistence-api-2.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/jboss-logging-3.3.2.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/jboss-transaction-api_1.2_spec-1.1.1.Final.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/jts-core-1.14.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/mchange-commons-java-0.2.11.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/org.osgi.compendium-4.3.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/org.osgi.core-4.3.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/postgresql-42.2.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/proxool-0.8.3.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/hibernatejar/hibernatejar/slf4j-api-1.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files/mysql-connector-java-8.0.13.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files/protobuf-java-3.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files/javax.activation-api-1.2.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files/jaxb-api-2.4.0-b180830.0359.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jaxb-osgi-2.4.0-b180830.0438.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/mysql-connector-java-5.1.15-bin.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files (1)/jstl-1.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files2/json-20190722.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/aopalliance-repackaged-2.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/hk2-api-2.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/hk2-locator-2.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/hk2-utils-2.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.activation-api-1.2.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.annotation-api-1.3.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.inject-2.6.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.json.bind-api-1.0.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.json-1.1.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.json-api-1.1.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.validation-api-2.0.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.ws.rs-api-2.1.6.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jakarta.xml.bind-api-2.3.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jaxrs-ri-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-client-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-common-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-container-servlet-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-container-servlet-core-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-hk2-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-media-jaxb-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-media-json-binding-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-media-sse-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/jersey-server-2.30.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/osgi-resource-locator-1.0.3.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files3/yasson-1.0.3.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files (2)/jackson-annotations-2.10.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files (2)/jackson-core-2.10.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/mon compte/Downloads/jar_files (2)/jackson-databind-2.10.2.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
